# Twitter-Paraphrase-and-Semantic-Similarity

./: .pre-commit-config.yaml  README.md  pyproject.toml
model/: baseline_logisticregression.model  best_svc_model_C_0.01.pkl
scripts/: baseline_logisticregression.py  baseline_random.py  feature_engineering_svm.py  feature_extractor.py  pit2015_checkformat.py  pit2015_eval_single.py
src/: BERT_Finetune.ipynb  data_io.py  paths.py
src/baselines/: baseline_logisticregression.py  baseline_random.py
src/bert/: __init__.py  data.py  predict.py  train.py
src/eval/: pit2015_eval_single.py
src/features/: __init__.py  feature_engineering_svm.py  feature_extractor.py
systemoutputs/: PIT2015_BASELINE_02_LG.output  PIT2015_BERT_03_BCL.output  PIT2015_SVC_04.output
