[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "protein-developability-prediction"
version = "0.1.0"
description = "Baselines and models for SemEval-2015 Task 1 paraphrase/similarity."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Mingran Cao" }
]
dependencies = [
  "joblib",
  "nltk",
  "numpy",
  "optuna",
  "pandas",
  "scikit-learn",
  "torch",
  "transformers"
]

[project.optional-dependencies]
dev = [
  "black",
  "isort",
  "pre-commit",
  "ruff"
]

[tool.black]
line-length = 100

target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
